--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header class="header">
-        <div class="container1">
+        <div class="container">
             <div class="header__content">
                 <div class="header__content-left">
                     <div class="logo"><img src="./../assets/images/svg/logo.svg" alt="logo.svg"></div>
