upgrade project adaptive1

--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="header__content-right">
                     <button class="btn__white"><a href="#">Log in</a> </button>
-                    <button class="btn__orange"><a href="#">Try it free</a> </button>
+                    <button class="btn__orange"><a href="#">Try it free</a></button>
                 </div>
             </div>
         </div>
@@ -116,6 +116,268 @@
             </div>
         </div>
     </section>
+    <section class="banner__three">
+        <div class="container">
+            <div class="content__banner-three">
+                <div class="content__banner-three-global-title">
+                    <h2>What can you localize with Lokalise?</h2>
+                </div>
+                <div class="banner__three-items">
+                    <div class="banner__three-item">
+                        <div class="banner__three-images">
+                            <img src="../assets/images/png/banner3-1.png" alt="banner3-1.png">
+                        </div>
+                        <div class="banner__three-title">
+                            <h3>Web apps</h3>
+                        </div>
+                        <div class="banner__three-description">
+                            <p>Any kind of web apps — backend, frontend, single page, blogs — you name it.</p>
+                        </div>
+                    </div>
+                    <div class="banner__three-item">
+                        <div class="banner__three-images">
+                            <img src="../assets/images/png/banner3-2.png" alt="banner3-2.png">
+                        </div>
+                        <div class="banner__three-title">
+                            <h3>Mobile apps</h3>
+                        </div>
+                        <div class="banner__three-description">
+                            <p>Upload any mobile platform language files. Embed <u>Lokalise iOS SDK</u> or <u>Lokalise Android SDK</u> if you prefer. </p>
+                        </div>
+                    </div>
+                    <div class="banner__three-item">
+                        <div class="banner__three-images">
+                            <img src="../assets/images/png/banner3-3.png" alt="banner3-3.png">
+                        </div>
+                        <div class="banner__three-title">
+                            <h3>Games</h3>
+                        </div>
+                        <div class="banner__three-description">
+                            <p>Our cloud software is trusted by many leading game developers around the world.</p>
+                        </div>
+                    </div>
+                    <div class="banner__three-item">
+                        <div class="banner__three-images">
+                            <img src="../assets/images/png/banner3-4.png" alt="banner3-4.png">
+                        </div>
+                        <div class="banner__three-title">
+                            <h3>Documents</h3>
+                        </div>
+                        <div class="banner__three-description">
+                            <p>Upload your DOCX and static HTML files.</p>
+                        </div>
+                    </div>
+                    <div class="banner__three-item">
+                        <div class="banner__three-images">
+                            <img src="../assets/images/png/banner3-5.png" alt="banner3-5.png">
+                        </div>
+                        <div class="banner__three-title">
+                            <h3>Marketing e-mails</h3>
+                        </div>
+                        <div class="banner__three-description">
+                            <p>Integrate with Salesforce Marketing Cloud (coming soon) or translate static e-mails.</p>
+                        </div>
+                    </div>
+                    <div class="banner__three-item">
+                        <div class="banner__three-images">
+                            <img src="../assets/images/png/banner3-6.png" alt="banner3-6.png">
+                        </div>
+                        <div class="banner__three-title">
+                            <h3>IoT</h3>
+                        </div>
+                        <div class="banner__three-description">
+                            <p>We support most popular localization file formats.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="banner__four">
+        <div class="container">
+            <div class="content__banner-four">
+                <div class="content__banner-four-global-title">
+                    <h2>Boost your localization team’s productivity tenfold</h2>
+                </div>
+                <div class="banner__four-items-shell">
+                    <div class="banner__four-items">
+                        <div class="banner__four-item">
+                            <div class="banner__four-images">
+                                <img src="../assets/images/svg/banner4-1.svg" alt="banner4-1.svg">
+                            </div>
+                            <div class="banner__four-title">
+                                <h3>Managers</h3>
+                            </div>
+                            <div class="banner__four-description">
+                                <p>Update existing and launch new features and products while simultaneously localizing them in multiple languages. Streamline your team's workflow, maximize productivity, and speed up expansion to other markets.</p>
+                            </div>
+                            <div class="banner__four-url">
+                                <a href="#">Lear More</a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="banner__four-items">
+                        <div class="banner__four-item">
+                            <div class="banner__four-images">
+                                <img src="../assets/images/svg/banner4-2.svg" alt="banner4-2.svg">
+                            </div>
+                            <div class="banner__four-title">
+                                <h3>Developers</h3>
+                            </div>
+                            <div class="banner__four-description">
+                                <p>Set up an integration with your code repository or your own custom SDK via Lokalise's powerful API. Do that once, and every time you make changes in the code, they'll be automatically imported to Lokalise for translation.
+                                    Learn more</p>
+                            </div>
+                            <div class="banner__four-url">
+                                <a href="#">Lear More</a>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="banner__four-items">
+                        <div class="banner__four-item">
+                            <div class="banner__four-images">
+                                <img src="../assets/images/svg/banner4-3.svg" alt="banner4-3.svg">
+                            </div>
+                            <div class="banner__four-title">
+                                <h3>Translators</h3>
+                            </div>
+                            <div class="banner__four-description">
+                                <p>Eliminate double-work and neverending revisions with visual context (screenshots) and live previews. Improve the quality and speed of your translations with built-in CAT tools, like autocomplete, inline machine translation, and translation memory.</p>
+                            </div>
+                            <div class="banner__four-url">
+                                <a href="#">Lear More</a>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="banner__five">
+        <div class="container">
+            <div class="content__banner-five">
+                    <div class="content__banner-five-description">
+                        <p class="five-description">“Lokalise has turned a task we were dreading into an absolute pleasure. Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots has been a lifesaver, and over-the-air updates are the icing on the cake.”</p>
+                        <p class="five-author">Edward Cooper, Chief Mobile Officer</p>
+                        <img class="five-revolut" src="./../assets/images/svg/banner-5-revolut.svg" alt="banner-5-revolut.svg">
+                    </div>
+                    <div class="content__banner-five-images">
+                        <img src="./../assets/images/svg/banner-5-photo.svg" alt="./../assets/images/svg/banner-5-photo.svg">
+                    </div>
+            </div>
+        </div>
+    </section>
+    <section class="banner__six">
+        <div class="container">
+            <div class="content__banner-six">
+                <div class="content__banner-six-left">
+                    <img src="./../assets/images/svg/banner6-1.svg" alt="banner6-1.svg">
+                    <h2>The most-loved translation management software</h2>
+                </div>
+                <div class="content__banner-six-right">
+                    <img src="./../assets/images/svg/banner6-2.svg" alt="banner6-2.svg">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="banner__seven">
+        <div class="container">
+            <div class="content__banner-seven">
+                <h2>Integrate Lokalise with your work tools</h2>
+                <p>Automate processes, eliminate routine tasks, and track progress with ease.</p>
+                <img src="./../assets/images/svg/banner7-1.svg" alt="banner7-1.svg">
+                <button class="btn__orange seven__btn"><a href="#">See all integrations</a></button>
+            </div>
+        </div>
+    </section>
+    <section class="banner__eight">
+        <div class="container">
+            <div class="content__banner-eight">
+                <h2>Localization made easy. Why wait?</h2>
+                <p>Try for free or let us show you how it works.</p>
+                <button class="btn__black">Try it free</button>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container">
+            <div class="content__footer">
+                <div class="content__footer-left">
+                    <h2>Case Studies</h2>
+                    <img src="../assets/images/svg/footer-1.svg" alt="footer-1.svg">
+                    <img class="footer-revolut" src="../assets/images/svg/footer-2.svg" alt="footer-2.svg">
+                    <p>Riding towards global success with a 100% teammate enthusiasm</p>
+                    <a href="#">Read More</a>
+                </div>
+                <div class="content__footer-left-right">
+                    <nav class="content__footer-nav">
+                        <div class="footer-nav-item">
+                            <h2>Products</h2>
+                            <ul>
+                                <li><a href="#">For developers</a></li>
+                                <li><a href="#">For managers</a></li>
+                                <li><a href="#">For translators</a></li>
+                                <li><a href="#">For designers</a></li>
+                                <li><a href="#">Integrations</a></li>
+                                <li><a href="#">Security</a></li>
+                                <li><a href="#">Pricing</a></li>
+                                <li><a href="#">Automations</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-nav-item">
+                            <h2>Support</h2>
+                            <ul>
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#">Documentation</a></li>
+                                <li><a href="#">Status</a></li>
+                                <li><a href="#">Product Updates</a></li>
+                                <li><a href="#">CLI Tool</a></li>
+                                <li><a href="#">API Reference</a></li>
+                                <li><a href="#">iOS and Android SDK</a></li>
+                                <li><a href="#">Supported File Formats</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-nav-item">
+                            <h2>Company</h2>
+                            <ul>
+                                <li><a href="#">About</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Careers | We`re Hiring</a></li>
+                                <li><a href="#">Case Studies</a></li>
+                                <li><a href="#">Media Kit</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-nav-item">
+                            <h2>Legal</h2>
+                            <ul>
+                                <li><a href="#">Terms of Service</a></li>
+                                <li><a href="#">Privacy Policy</a></li>
+                                <li><a href="#">Cookie Policy</a></li>
+                                <li><a href="#">Privacy Shield</a></li>
+                                <li><a href="#">DPA</a></li>
+                                <li><a href="#">List of Sub-processors</a></li>
+                                <li><a href="#">Candidates Privacy Notice</a></li>
+                             </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+            <div class="copyright">
+                <div class="copyright__left-item">
+                    <img src="./../assets/images/svg/footer-logo.svg" alt="footer-logo.svg">
+                    <p>Localization workflow for your web and mobile apps, games and digital content.</p>
+                </div>
+                <div class="copyright__right-item">
+                    <p>©2001-2020</p>
+                    <p>All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 </main>
 <footer></footer>
 </body>
